--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +11,14 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.0",
+    "pdfmake": "^0.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.6.0",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/pdfmake": "^0.1.20",
+    "@types/react-pdf": "^5.0.9"
   }
 }
